subiendo archivos para el github

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     aria-label="Número de puesto">
                 <input type="text" id="nombreResponsable" placeholder="Nombre del responsable"
                     aria-label="Nombre del responsable">
-                <button onclick="agregarCompra()"><i class="fas fa-plus"></i> Agregar compra <i class="fas fa-ticket-alt"></i>
+                <button onclick="agregarCompra()"><i class="fas fa-plus"></i> Agregar compra <i
+                        class="fas fa-ticket-alt"></i>
 
                 </button>
                 <p id="mensaje" class="mensaje"></p>
